# disarm64

./: .clang-format  CMakeLists.txt  README.md  assembler.cpp  assembler.hpp  classify.c  classify.cpp  decode.c  decode.cpp  disarm64.h  disarm64.hpp  encode.c  encode.cpp  format.c  format.cpp  parse.py
include/: assembler.hpp  disarm64.hpp
src/: assembler.cpp  classify.cpp  encode.cpp
test/: bf.cpp  decode-test.cpp  encode-test-adcsbc.inc  encode-test-addsub-imm.inc  encode-test-addsub-shift.inc  encode-test-adr.inc  encode-test-bfm-extr.inc  encode-test-branchreg.inc  encode-test-fcma.inc  encode-test-hint.inc  encode-test-immfmov.inc  encode-test-immlogical.inc  encode-test-immsimd.inc  encode-test-mem.inc  encode-test-memfp.inc  encode-test-memsimd.inc  encode-test-pauth.inc  encode-test-simd-shr-vec-imm.inc  encode-test-simdcopy.inc  encode-test-simdxelem.inc  encode-test-sys.inc  encode-test.cpp
